Fixed brandslides z-index issue

--- a/scss/jj-storefront.scss
+++ b/scss/jj-storefront.scss
@@ -72,7 +72,7 @@
             &.logo {
                 position: absolute;
                 margin-top: 0;
-                z-index: 10;
+                z-index: 1;
             }
         }
     }
